k3s/manifests/ntfy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-uptime-kuma
  namespace: ntfy
spec:
  podSelector:
    matchLabels:
      app: ntfy
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: uptime-kuma
          podSelector:
            matchLabels:
              app: uptime-kuma
      ports:
        - protocol: TCP
          port: 80
